--- a/stdio-common/Makefile
+++ b/stdio-common/Makefile
@@ -17,27 +17,31 @@
 # Cambridge, MA 02139, USA.
 
 #
-#	Specific makefile for stdio.
+#	Specific makefile for stdio-common.
 #
-subdir	:= stdio
+subdir	:= stdio-common
 
-headers	:= stdio.h
+headers	:= stdio_lim.h printf.h
 
 routines	:=							      \
-	feof ferror clearerr fileno					      \
-	newstream fopen freopen fdopen fopncook fmemopen		      \
-	setbuf setvbuf setbuffer setlinebuf				      \
-	fseek ftell rewind fgetpos fsetpos				      \
-	fread fwrite							      \
-	ungetc								      \
-	fgetc getc getchar						      \
-	fputc putc putchar						      \
-	fgets gets fputs puts						      \
-	getdelim							      \
-	fclose fflush							      \
-	memstream obstream						      \
-	internals sysd-stdio pipestream stdio_init libc_fatal
-aux	:= defs glue
+	ctermid cuserid							      \
+	vfprintf vprintf printf_fp reg-printf printf-prs _itoa		      \
+	vsnprintf vsprintf vasprintf	      				      \
+	fprintf printf snprintf sprintf asprintf			      \
+	dprintf vdprintf						      \
+	vfscanf vscanf vsscanf						      \
+	fscanf scanf sscanf						      \
+	perror psignal							      \
+	tmpfile tmpnam tempnam tempname					      \
+	getline getw putw						      \
+	remove rename
+aux	:= errlist siglist
+distribute := _itoa.h printf-parse.h
+
+tests := tst-printf tstscanf test_rdwr test-popen tstgetln test-fseek \
+	 temptest tst-fileno test-fwrite \
+	 xbug errnobug \
+	 bug1 bug2 bug3 bug4 bug5 bug6 bug7
 
 
 include ../Rules
