--- a/login/Makefile
+++ b/login/Makefile
@@ -29,11 +29,14 @@ routines := getutent getutent_r getutid getutline getutid_r getutline_r \
 
 others = utmpd
 install-sbin = utmpd
-utmpd-routines := connection database error request xtmp
+utmpd-routines := utmpd connection database error request xtmp
+extra-objs := $(utmpd-routines:=.o)
 
-distribute := utmp-private.h utmpd/xtmp.h utmpd/utmpd.h utmpd/utmpd-private.h
+distribute := utmp-private.h programs/xtmp.h programs/utmpd.h \
+	      programs/utmpd-private.h $(utmpd-routines:%=programs/%.c)
 
-vpath %.c utmpd
+subdir-dirs = programs
+vpath %.c programs
 
 # Build the -lutil library with these extra functions.
 extra-libs      := libutil
