--- a/iconvdata/Makefile
+++ b/iconvdata/Makefile
@@ -182,7 +182,7 @@ distribute := 8bit-generic.c 8bit-gap.c gap.pl gaptab.pl gconv-modules	    \
 	      jis0208.c jis0212.c extra-module.mk euckr.c johab.c uhc.c	    \
 	      ksc5601.c ksc5601.h iso646.c big5.c eucjp.c gb2312.c gb2312.h \
 	      euccn.c euctw.c cns11643l1.c cns11643l1.h cns11643.h	    \
-	      cns11643.c run-iconv-test.sh $(wildcard testdata/*)	    \
+	      cns11643.c run-iconv-test.sh TESTS $(wildcard testdata/*)	    \
 	      ebcdic-dk-no.c ebcdic-dk-no-a.c ebcdic-es.c ebcdic-es-a.c	    \
 	      ebcdic-es-s.c ebcdic-fi-se.c ebcdic-fi-se-a.c ebcdic-fr.c	    \
 	      ebcdic-is-friss.c ebcdic-it.c ebcdic-pt.c ebcdic-uk.c	    \
@@ -269,6 +269,11 @@ perl-generated-headers := koi8-r.h latin-greek.h latin-greek-1.h	 \
 			  cp1255.h cp1256.h cp1257.h iso8859-5.h	 \
 			  iso8859-7.h iso8859-8.h iso8859-10.h		 \
 			  iso8859-7jp.h
+
+generated = $(sed-generated-headers) $(perl-generated-headers)
+ifdef objpfx
+generated += gconv-modules
+endif
 
 # The headers must be generated before the compilation.
 before-compile = $(addprefix $(objpfx),$(sed-generated-headers)) \
@@ -475,6 +480,7 @@ endif
 
 include ../Rules
 
+tests = iconv-test
 tests: $(objpfx)iconv-test.out
 
 $(objpfx)iconv-test.out: run-iconv-test.sh $(objpfx)gconv-modules \
