--- a/FAQ.in
+++ b/FAQ.in
@@ -172,14 +172,14 @@ new kernel features when using old kernel headers for compiling the GNU C
 library.
 
 {ZW} Even if you are using a 2.0 kernel on your machine, we recommend you
-compile GNU libc with 2.1 kernel headers.  That way you won't have to
-recompile libc if you ever upgrade to kernel 2.1 or 2.2.  To tell libc which
+compile GNU libc with 2.2 kernel headers.  That way you won't have to
+recompile libc if you ever upgrade to kernel 2.2.  To tell libc which
 headers to use, give configure the --with-headers switch
-(e.g. --with-headers=/usr/src/linux-2.1.107/include).
+(e.g. --with-headers=/usr/src/linux-2.2.0/include).
 
-Note that you must configure the 2.1 kernel if you do this, otherwise libc
+Note that you must configure the 2.2 kernel if you do this, otherwise libc
 will be unable to find <linux/version.h>.  Just change the current directory
-to the root of the 2.1 tree and do `make include/linux/version.h'.
+to the root of the 2.2 tree and do `make include/linux/version.h'.
 
 ??	The compiler hangs while building iconvdata modules.  What's
 	wrong?
@@ -308,8 +308,8 @@ There are some failures which are not directly related to the GNU libc:
   checks have been used so that you can't build with it.
 - The kernel might have bugs.  For example on Linux/Alpha 2.0.34 the
   floating point handling has quite a number of bugs and therefore most of
-  the test cases in the math subdirectory will fail.  The current Linux 2.1
-  development kernels have fixes for the floating point support on Alpha.
+  the test cases in the math subdirectory will fail.  Linux 2.2 has
+  fixes for the floating point support on Alpha.
 
 ??	What is symbol versioning good for?  Do I need it?
 
@@ -783,7 +783,7 @@ really screwed up.
 in the kernel and work-arounds are not suitable.  Besides, some parts of the
 kernel are too buggy when it comes to using threads.
 
-If you need nscd, you have to use a 2.1 kernel.
+If you need nscd, you have to use at least a 2.1 kernel.
 
 Note that I have at this point no information about any other platform.
 
@@ -1182,7 +1182,7 @@ define it this way and therefore programs must be adopted.
 ??	Why has <netinet/ip_fw.h> disappeared?
 
 {AJ} The corresponding Linux kernel data structures and constants are
-totally different in Linux 2.0 and Linux 2.1.  This situation has to be
+totally different in Linux 2.0 and Linux 2.2.  This situation has to be
 taken care in user programs using the firewall structures and therefore
 those programs (ipfw is AFAIK the only one) should deal with this problem
 themselves.
