1999-01-23  Roland McGrath  <roland@baalperazim.frob.com>
* sysdeps/unix/sysv/linux/sys/mtio.h: Moved to... 
* sysdeps/gnu/sys/mtio.h: ...here. 
(_IOT_mtop, _IOT_mtget, _IOT_mtpos, _IOT_mtconfiginfo): New macros. 
* sysdeps/gnu/Dist: Add sys/mtio.h. 
* sysdeps/unix/sysv/linux/Dist: Remove sys/mtio.h. 
* sysdeps/unix/sysv/linux/Makefile [$(subdir) = misc] 
(sysdep_headers): Don't add sys/mtio.h here. 
* sysdeps/gnu/Makefile [$(subdir) = misc] (sysdep_headers): Add it 
here instead.

--- a/sysdeps/gnu/Makefile
+++ b/sysdeps/gnu/Makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 1996, 1997, 1998 Free Software Foundation, Inc.
+# Copyright (C) 1996, 97, 98, 99 Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
 # The GNU C Library is free software; you can redistribute it and/or
@@ -39,4 +39,9 @@ endif
 
 ifeq ($(subdir),inet)
 sysdep_headers += netinet/udp.h netinet/ip_icmp.h
+endif
+
+
+ifeq ($(subdir),misc)
+sysdep_headers += sys/mtio.h
 endif
