Remade for stable-2.1

--- a/README.template
+++ b/README.template
@@ -1,4 +1,4 @@
-This directory contains the version VERSION test release of the GNU C Library.
+This directory contains the version VERSION release of the GNU C Library.
 Many bugs have been fixed since the last release.
 Some bugs surely remain.
 
