--- a/FAQ.in
+++ b/FAQ.in
@@ -858,7 +858,8 @@ on a glibc 2.1 system.  You just add -lcompat and you should be fine.
 The glibc-compat add-on will provide the libcompat.a library, the older
 nss modules, and a few other files.  Together, they should make it
 possible to do development with old static libraries on a glibc 2.1
-system.  This add-on is still in development.  You can get it from <URL>
+system.  This add-on is still in development.  You can get it from
+	ftp://alpha.gnu.org/gnu/glibc-compat-2.1.tar.gz
 but please keep in mind that it is experimental.
 
 ??	Why is extracting files via tar so slow?
