--- a/README.template
+++ b/README.template
@@ -50,18 +50,19 @@ electronic mail to <bug-glibc@gnu.org>.
 
 The GNU C library now includes Michael Glad's Ultra Fast Crypt, which
 provides the Unix `crypt' function, plus some other entry points.
-Because of the United States export restriction on DES implementations,
-we are distributing this code separately from the rest of the C
-library.  There is an extra distribution tar file just for crypt; it is
-called `glibc-crypt-VERSION.tar.gz'.  You can just unpack the crypt
-distribution along with the rest of the C library and build; you can
-also build the library without getting crypt.  Users outside the USA
-can get the crypt distribution via anonymous FTP from ftp.ifi.uio.no
-[129.240.64.21], or another archive site outside the USA.  Archive
-maintainers are encouraged to copy this distribution to their archives
-outside the USA.  Please get it from ftp.ifi.uio.no; transferring this
-distribution from ftp.gnu.org (or any other site in the USA) to a
-site outside the USA is in violation of US export laws.
+Because of the United States export restriction on DES
+implementations, we are distributing this code separately from the
+rest of the C library.  There is an extra distribution tar file just
+for crypt; it is called `glibc-crypt-VERSION.tar.gz'.  You can just
+unpack the crypt distribution along with the rest of the C library and
+build; you can also build the library without getting crypt.  Users
+outside the USA can get the crypt distribution via anonymous FTP from
+ftp.funet.fi [128.214.248.6] in the directory pub/gnu/funet, or
+another archive site outside the USA.  Archive maintainers are
+encouraged to copy this distribution to their archives outside the
+USA.  Please get it from ftp.funet.fi; transferring this distribution
+from ftp.gnu.org (or any other site in the USA) to a site outside the
+USA is in violation of US export laws.
 
 Beside the separate crypt tar file there are some more add-ons which can be
 used together with GNU libc.  They are designed in a way to ease the
